feat: REST APIs CRUD for categories, products, users are completed
