# api/src/database/entity/category.ts
@@ -16,7 +16,7 @@ export class Category extends BaseEntity {
   @Column({ nullable: true, length: 500 })
   categoryImageUrl: string;
 
-  @OneToMany(() => Product, (products: Product) => products.productName, { onDelete: 'CASCADE' })
+  @OneToMany(() => Product, (products) => products.categoryName, { onDelete: 'CASCADE', nullable: true })
   products: Product;
 
 }
